Adding a content div

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 
 <body>
 
-  <h1>This is a Heading</h1>
+	<div id="content">
+	  <h1>This is a Heading</h1>
 
-  <p>This is a paragraph.</p>
+	  <p>This is a paragraph.</p>
+	</div><!-- #content -->
 
 </body>
 
