--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
   <h1>This is a Heading</h1>
 
-  <p>This is a paragraph.</p>
+  <p>This is a paragraph.</p>  
+
+  <ul>
+	  <li>Item 1</li>
+	  <li>Item 2</li>
+  </ul>
 
 </body>
 
