--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
+	<div id="content">
+	  <h1>This is a Heading</h1>
 
-  <h1>This is a Heading</h1>
+	  <p>This is a paragraph.</p>  
 
-  <p>This is a paragraph.</p>  
-
-  <ul>
-	  <li>Item 1</li>
-	  <li>Item 2</li>
-  </ul>
-
+	  <ul>
+		  <li>Item 1</li>
+		  <li>Item 2</li>
+	  </ul>
+	</div><!-- content -->
 </body>
 
 </html>
