change list item title

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<div id="content">
 	  <h1>This is a Heading</h1>
 
-	  <p>This is a paragraph.</p>  
-
+	  <p>Baseball Cards:</p>  
 	  <ul>
 		  <li>Item 1</li>
 		  <li>Item 2</li>
