--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div id="content">
-	  <h1>This is a Heading</h1>
+	  <h1>The Families That Foster</h1>
 
 	  <p>Baseball Cards:</p>  
 	  <ul>
