adding the first label

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 	  </ul>
 
 	  <form>
-	  	<input type="text"/>
+	  	<label>
+				Name
+				<input type="text"/>
+		  </label>
 	  </form>
 
 	</div><!-- content -->
