adding a submit button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				Name
 				<input type="text"/>
 		  </label>
+		  <input type="submit" value="Submit"/>
 	  </form>
 
 	</div><!-- content -->
