adding a super hero input

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 				<input type="text"/>
 		  </label>
 
+	  	<label>
+				Super Hero
+				<input type="text"/>
+		  </label>
+
 		  <input type="submit" value="Submit"/>
 
 	  </form>
